# bel7-axum

./: AGENTS.md  CHANGELOG.md  Cargo.toml
src/: lib.rs  pagination.rs  static_files.rs  websocket.rs
src/errors/: api_error.rs  mod.rs  traits.rs
tests/: api_error_tests.rs  pagination_tests.rs  traits_tests.rs  websocket_tests.rs
